--- a/scss/style.css
+++ b/scss/style.css
@@ -346,17 +346,10 @@ small {
   min-width: 100%;
   margin: 0;
   padding: 0;
+  background-image: url("../assets/images/5_Arboles_texturas.svg");
   background-size: cover;
   opacity: 0.9;
   margin: 3em 0 0 0;
-}
-
-.fondo_menta {
-  background-image: url("../assets/images/5_Arboles_texturas.svg");
-}
-
-.fondo_mandarina {
-  background-image: url("../assets/images/6_Arboles_texturas.svg");
 }
 
 .apertura {
@@ -581,6 +574,4 @@ small {
   top: 3%;
   left: 3%;
   border: none;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
