--- a/scss/components/paneles.scss
+++ b/scss/components/paneles.scss
@@ -170,11 +170,15 @@ small
     min-width: 100%;
     margin: 0;
     padding: 0;
-    background-image: url("../assets/images/5_Arboles_texturas.svg");
     background-size: cover;
     opacity: .9;
     margin: 3em 0 0 0;
 }
+
+.fondo_menta
+{background-image: url("../assets/images/5_Arboles_texturas.svg");}
+.fondo_mandarina
+{background-image: url("../assets/images/6_Arboles_texturas.svg");}
 
 .apertura 
 {
